--- a/app/views/users/_my_topics.html.erb
+++ b/app/views/users/_my_topics.html.erb
@@ -52,6 +52,15 @@
                 <div class="text-right" >
                   <%= l topic.created_at %>
                 </div>
+                
+                <% if logged_in? %>
+                  <% if topic.user_id == current_user.id %>
+                    <div class="text-right" >
+                      <%= link_to '削除', "/topics/#{topic.id}/destroy", method: :delete %>
+                    </div>
+                  <% end %>
+                <% end %>
+                
               <% end %>
             </div>
 
