--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -422,6 +422,9 @@ hr {
     margin-top: 30px;
     border: 1px solid #e6ecf0;
     border-radius: 3px;
+    ul {
+      list-style: none;
+    }
     .topic-author {
       padding-right: 20px;
       padding-left: 20px;
