add sort design

--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -94,8 +94,14 @@
         </div>
       </div>
     <% end %>
-    <br><div class="text-center"><%= link_to "もっと見る", topics_path %></div>
-
+    
+    <div class="more">
+      <a href="topics" class="button-20">
+        <span class="text">more</span>
+        <span class="arrow"></span>
+      </a>
+    </div>
+    
   </div>
 </div>
 
