--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -706,3 +706,78 @@ body {
   color: white;
   background: green;
 }
+
+// プルダウン
+select::-ms-expand {
+	display: none;
+}
+select {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+	padding: 7px 30px 7px 10px;
+	font-size: 93%;
+	line-height: 1.1em;
+	border-radius: 5px;
+	width: 200px;
+}
+
+input[type="search"] {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+	margin-bottom: 10px;
+	padding: 7px 30px 7px 10px;
+	font-size: 93%;
+	line-height: 1.1em;
+	border-radius: 5px;
+	width: 200px;
+	border-width: thin;
+}
+
+// トップページ　もっとみる
+.more {
+  padding-top: 10px;
+}
+
+.button-20 {
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 20em;
+  height: 3.5em;
+  padding: 0.4em 0;
+  margin: 0 auto;
+  text-decoration: none;
+  border: 1px solid #74cfae;
+  background-color: #74cfae;
+}
+
+.text {
+  display: inline-block;
+  margin-right: 1em;
+  font-size: 1.4em;
+  color: white;
+}
+
+.arrow {
+  position: relative;
+  display: inline-block;
+  width: 50px;
+  height: 1px;
+  background: white;
+  border: white;
+}
+
+.arrow::before {
+  position: absolute;
+  top: -2px;
+  right: -5px;
+  display: block;
+  width: 0;
+  height: 0;
+  content: '';
+  border-right: 7px solid transparent;
+  border-bottom: 3px solid white;
+}
