--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -3,16 +3,20 @@
 
 <div class="col-md-6 col-md-offset-3">
 <%= search_form_for @q do |f| %>
-  <%= f.label :description_cont, "キーワード" %><br>
-  <%= f.search_field :description_cont %>
+  <%= f.search_field :description_cont, label: false %>
   <%= f.submit "検索" %>
 <% end %>
 </div>
 
 <div class="col-md-6 col-md-offset-3 field">
-  <%= link_to "新着順", topics_path(option:"A") %>
-  <%= link_to "古い順", topics_path(option:"B") %>
-  <%= link_to "いいね多い順", topics_path(option: "C") %>
+  <%= form_with url: topics_path, method: :get, local: true do |f| %>
+  <%= f.select :option, [ ['', 'A'],
+                            ['新着順', 'B'],
+                            ['古い順', 'C'],
+                            ['いいね多い順', 'D'],
+                          ] %>
+  <%= f.submit "並び替え" %>
+<% end %>
 </div>
 
 <% if !@q.description_cont.nil? %>
