add ajax in comment

--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -68,7 +68,7 @@
                       <li><i class="far fa-comment-dots like-btn"></i></li>
                     <% end %>
                     <li><i class="far fa-heart like-btn" ></i></li>
-                    <li><%= topic.like_users.count %></li>
+                    <li class="likes-position"><%= topic.like_users.count %></li>
                   <% end %>
                 </ul>
 
@@ -107,9 +107,10 @@
   <div id="skills">
     <div class="container">
       <div class="row centered">
-        <h3>OUR SKILLS</h3>
+        <h3>Feature</h3>
         <div class="col-lg-3 mt">
           <canvas id="javascript" height="130" width="130"></canvas>
+          <i class="fas fa-pen"></i>
           <p>Javascript</p>
           <br>
         </div>
@@ -200,17 +201,8 @@
   <div id="copyrights">
     <div class="container">
       <p>
-        &copy; Copyrights <strong>Bolt</strong>. All Rights Reserved
+        &copy; Copyrights <strong>Takaya Hirukawa</strong>. All Rights Reserved
       </p>
-      <div class="credits">
-        <!--
-          You are NOT allowed to delete the credit link to TemplateMag with free version.
-          You can delete the credit link only if you bought the pro version.
-          Buy the pro version with working PHP/AJAX contact form: https://templatemag.com/bolt-bootstrap-agency-template/
-          Licensing information: https://templatemag.com/license/
-        -->
-        Created with Bolt template by <a href="https://templatemag.com/">TemplateMag</a>
-      </div>
     </div>
   </div>
 
