--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -123,7 +123,7 @@
                       <li><i class="far fa-comment-dots like-btn"></i></li>
                     <% end %>
                     <li><i class="far fa-heart like-btn" ></i></li>
-                    <li><%= topic.like_users.count %></li>
+                    <li class="likes-position"><%= topic.like_users.count %></li>
                   <% end %>
                 </ul>
 
