--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -500,6 +500,50 @@ hr {
     list-style: none;
   }
 }
+
+.likes-position {
+  margin-left: 3px;
+  position: relative;
+  top: 6px;
+}
+
+.created-destroy {
+  margin: 25px;
+}
+
+.comment-button {
+ padding: 30px 0 0 0;
+  li {
+    float: left;
+    list-style: none;
+  }
+}
+
+.comment-letter{
+  font-weight: bold; 
+  margin: 0 0 30px 10px;
+  position: relative;
+  top: 3px;
+  // vertical-align: text-bottom;
+}
+
+.secondary-comment {
+  margin: 25px;
+}
+
+.name-created {
+  padding-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.comment-content {
+  padding-bottom: 20px;
+}
+
+.comment-clear {
+  clear: both;
+}
  
 // errors
 #error_explanation {
