--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,8 +1,17 @@
-<% @comments.each do |c| %>
-  <div class="text-left">@<%= link_to c.user.name, user_path(c.user_id) %></div>
-  <%= c.content %>
-  <div class="text-right"><%= l c.created_at %></div>
-  <% if current_user == c.user %>
-    <div class="text-right"><%= link_to "削除", topic_comment_path(@topic, c), method: :delete, remote: true %></div>
+<% comments.each do |c| %>
+ <div class="secondary-comment">
+    <div class="name-created comment-clear">
+      <div class="text-left">@<%= link_to c.user.name, user_path(c.user_id) %></div>
+      <div class="text-right"><%= l c.created_at %></div>
+    </div>
+    <div class="comment-content">
+      <%= c.content %>
+    </div>
+    <% if current_user == c.user %>
+      <div class="text-right border-bottom"><%= link_to "削除", topic_comment_path(c.topic_id, c.id), method: :delete, remote: true %></div>
+      <% else %>
+      <p>　　</p>
+  </div>
+    <hr>
   <% end %>
 <% end %>
