--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for [@topic, @comment], remote: true do |f| %>
-  <div class="form-group">
+  <div class="form-group comment-clear">
     <%= f.label :content %>
-    <%= f.text_area :content, class: 'form-control', id: 'comment_field' %>
+    <%= f.text_area :content, class: 'form-control', id: 'comment-field' %>
   </div>
   <%= f.submit 'コメントする' %>
 <% end %>
