--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -82,9 +82,9 @@
         </div>
       </div>
     <% end %>
-<!--<div class="text-center">-->
-<!--  <%#= paginate @topics %>-->
-<!--</div>-->
+ <div class="col-md-6 col-md-offset-3 text-center">
+  <%= paginate @topics %>
+</div>
 <% else %>
 
     <% @topics.each do |topic| %>
@@ -149,6 +149,10 @@
         </div>
       </div>
     <% end %>
+    
+    <div class="col-md-6 col-md-offset-3 text-center">
+      <%= paginate @topics %>
+    </div>
 
  <% end %>
 
