--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -45,19 +45,19 @@
 <div class="mypage-footer">
   <div id="fuu" class="section">
     <div class="et_pb_text_inner1">
-      <%= render 'my_topics' %>
+      <%= render partial: 'topics', locals: { comments: @my_topics } %>
     </div>  
   </div>
   
   <div id="euu" class="section">
     <div class="et_pb_text_inner2">
-      <%= render 'my_likes' %>
+      <%= render partial: 'topics', locals: { comments: @my_likes } %>
     </div>
   </div>
   
   <div id="guu" class="section">
     <div class="et_pb_text_inner3">
-      <%= render "my_comments" %>
+      <%= render partial: 'topics', locals: { comments: @my_comments } %>
     </div>  
   </div>
 </div>
