--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -27,7 +27,7 @@
 
             <div class="form-group">
               <%= f.label :password, 'password(任意)' %>
-              <%= f.text_field :password, class: 'form-control', id: 'password' %>
+              <%= f.password_field :password, class: 'form-control', id: 'password' %>
               <%= button_tag 'パスワードを生成する', id: 'auto-fill-link', type: "button" %>
             </div>
   
@@ -48,4 +48,16 @@
       });
     }
   })
+  
+    // パスワード入力フォームのスラッシュ目アイコンをクリックするとpassのマスキングを解除
+  function eyeslashClick(){
+    $(".fa-eye-slash").on("click", function(){
+      $(".fa-eye").off("click") // offを設定しないとクリックした回数分だけ重複作動してしまう為
+      let input = $(this).parents(".form-group").find("input");
+      input.attr("type", "text"); // typeをpasswordに変更しマスキングを解除する
+      $(this).removeClass(); // 目を消す
+      $(this).addClass("fas fa-eye"); // アイコンをスラッシュのない目に置き換える
+      eyeClick(); // 追加したfas fa-eyeにクリックイベントを付与
+    });
+  }
 </script>
