Like dealing with repeated hits

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -106,7 +106,7 @@ hr {
   padding-bottom: 0px;
 }
 
-.btn-theme {
+.-theme {
   color: #ffffff;
   background-color: #74cfae;
   border-color: transparent;
