add icon in password_field

--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -16,19 +16,23 @@
             <% end %>
 
             <div class="form-group">
-              <%= f.label :image, 'image(任意)' %>
+              <%= f.label :image, '写真(任意)' %>
               <%= f.file_field :image %>
             </div>
   
             <div class="form-group">
-              <%= f.label :description, "description(必須)" %>
+              <%= f.label :description, "投稿内容(必須)" %>
               <%= f.text_area :description, class: 'form-control' %>
             </div>
 
             <div class="form-group">
-              <%= f.label :password, 'password(任意)' %>
-              <%= f.password_field :password, class: 'form-control', id: 'password' %>
+              <%= f.label :password, 'パスワード(任意)' %>
+              <%= f.text_field :password, class: 'form-control', id: 'password' %>
+              <div class="password-eye">
+                <span class="fas fa-eye"></span>
+              </div>
               <%= button_tag 'パスワードを生成する', id: 'auto-fill-link', type: "button" %>
+              <p>※パスワードは紛失しないようにご注意ください</p>
             </div>
   
             <%= f.submit '投稿', class: 'btn btn-black btn-block' %>
@@ -48,4 +52,30 @@
       });
     }
   })
+  
+    // パスワード入力フォームのスラッシュ目アイコンをクリックするとpassのマスキングを解除
+  function eyeslashClick(){
+    $(".fa-eye-slash").on("click", function(){
+      $(".fa-eye").off("click") // offを設定しないとクリックした回数分だけ重複作動してしまう為
+      let input = $(this).parents(".form-group").find("input");
+      input.attr("type", "text"); // typeをpasswordに変更しマスキングを解除する
+      $(this).removeClass(); // 目を消す
+      $(this).addClass("fas fa-eye"); // アイコンをスラッシュのない目に置き換える
+      eyeClick(); // 追加したfas fa-eyeにクリックイベントを付与
+    });
+  }
+  // パスワード入力フォームの目アイコンをクリックするとpassをマスキング
+  function eyeClick(){
+    $(".fa-eye").on("click", function(){
+      $(".fa-eye-slash").off("click") // offを設定しないとクリックした回数分だけ重複作動してしまう為
+      let input = $(this).parents(".form-group").find("input");
+      input.attr("type", "password"); // typeをpasswordに変更しマスキングを有効にする
+      $(this).removeClass(); // 目を消す
+      $(this).addClass("fas fa-eye-slash"); // アイコンをスラッシュのある目に置き換える
+      eyeslashClick(); // 追加したfas fa-eye-slashにクリックイベントを付与
+    });
+  }
+  // 目アイコンのクリックイベント呼び出しをデフォルト化
+  eyeslashClick();
+  eyeClick();
 </script>
