--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -16,11 +16,21 @@
         </div>
         <div class="col-lg-7 centered">
           <% unless logged_in? %>
-            <h3>Log In</h3>
-            <%= render 'sessions/login_form' %>
+            <%= link_to login_path do %>
+              <h1 class="button-2">Login</h1>
+            <% end %>
+            <%= link_to new_user_path do %>
+              <h1 class="button-2">Sign Up</h1>
+            <% end %>
           <% else %>
+            <%= link_to current_user do %>
+              <h1 class="button-2">マイページ</h1>
+            <% end %>
             <%= link_to new_topic_path do %>
-              <h1 class="button-2">投稿する</h1>
+              <h1 class="button-2">新規投稿</h1>
+            <% end %>
+            <%= link_to topics_path do %>
+              <h1 class="button-2">投稿一覧</h1>
             <% end %>
           <% end %>
         </div>
@@ -30,13 +40,16 @@
 
 <div class="topic-index-wrapper">
   <div class="container">
-    <h3 class="text-center">最近の投稿</h3>
+    
+    <div class="col-md-6 col-md-offset-3">
+      <h3 class="text-center">New Topics</h3>
+    </div>
 
     <% @topics.first(3).each do |topic| %>
       <div class="row">
         <div class="col-md-6 col-md-offset-3">
           <div class="topic-index-single">
-
+            
             <h2 class="topic-author">
               <%= link_to topic.user.name, user_path(topic.user.id) %>
             </h2>
@@ -75,9 +88,9 @@
             <div class="descript">
               <%= link_to topic_path(topic) do %>
                 <% unless topic.password_digest %>
-                  <p class="topic-text">
-                    <%= topic.description %>
-                  </p>
+                  <div class="topic-text">
+                    <%= simple_format(topic.description) %>
+                  </div>
                 <% else %>
                   <p class="topic-text">
                     <%= link_to "secret", "/topic_password/#{topic.id}", id: topic.id %>
@@ -104,100 +117,6 @@
   </div>
 </div>
 
-  <div id="skills">
-    <div class="container">
-      <div class="row centered">
-        <h3>Feature</h3>
-        <div class="col-lg-3 mt">
-          <canvas id="javascript" height="130" width="130"></canvas>
-          <i class="fas fa-pen"></i>
-          <p>Javascript</p>
-          <br>
-        </div>
-        <div class="col-lg-3 mt">
-          <canvas id="bootstrap" height="130" width="130"></canvas>
-          <p>Bootstrap</p>
-          <br>
-        </div>
-        <div class="col-lg-3 mt">
-          <canvas id="wordpress" height="130" width="130"></canvas>
-          <p>Wordpress</p>
-          <br>
-        </div>
-        <div class="col-lg-3 mt">
-          <canvas id="photoshop" height="130" width="130"></canvas>
-          <p>Photoshop</p>
-          <br>
-        </div>
-      </div>
-      <!-- /row -->
-    </div>
-    <!-- /container -->
-  </div>
-  <!-- /skills -->
-
-  <section id="contact">
-
-    <div id="social">
-      <div class="container">
-        <div class="row centered">
-          <div class="col-lg-8 col-lg-offset-2">
-            <div class="col-md-3">
-              <a href="#"><i class="fa fa-facebook"></i></a>
-            </div>
-            <div class="col-md-3">
-              <a href="#"><i class="fa fa-dribbble"></i></a>
-            </div>
-            <div class="col-md-3">
-              <a href="#"><i class="fa fa-twitter"></i></a>
-            </div>
-            <div class="col-md-3">
-              <a href="#"><i class="fa fa-envelope"></i></a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- /container -->
-    </div>
-    <!-- /social -->
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-          <form class="contact-form php-mail-form" role="form" action="contactform/contactform.php" method="POST">
-
-            <div class="form-group">
-              <input type="name" name="name" class="form-control" id="contact-name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" >
-              <div class="validate"></div>
-            </div>
-            <div class="form-group">
-              <input type="email" name="email" class="form-control" id="contact-email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email">
-              <div class="validate"></div>
-            </div>
-            <div class="form-group">
-              <input type="text" name="subject" class="form-control" id="contact-subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject">
-              <div class="validate"></div>
-            </div>
-
-            <div class="form-group">
-              <textarea class="form-control" name="message" id="contact-message" placeholder="Your Message" rows="5" data-rule="required" data-msg="Please write something for us"></textarea>
-              <div class="validate"></div>
-            </div>
-
-            <div class="loading"></div>
-            <div class="error-message"></div>
-            <div class="sent-message">Your message has been sent. Thank you!</div>
-
-            <div class="form-send">
-              <button type="submit" class="btn btn-large">Send Message</button>
-            </div>
-
-          </form>
-        </div>
-      </div>
-    </div>
-
-  </section>
-
   <div id="copyrights">
     <div class="container">
       <p>
@@ -205,13 +124,3 @@
       </p>
     </div>
   </div>
-
-  <!-- JavaScript Libraries -->
-  <script src="lib/jquery/jquery.min.js"></script>
-  <script src="lib/bootstrap/js/bootstrap.min.js"></script>
-  <script src="lib/php-mail-form/validate.js"></script>
-  <script src="lib/easing/easing.min.js"></script>
-  <script src="lib/chart/chart.js"></script>
-
-  <!-- Template Main Javascript File -->
-  <script src="js/main.js"></script>
