--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -10,10 +10,10 @@
 
 <div class="col-md-6 col-md-offset-3 field">
   <%= form_with url: topics_path, method: :get, local: true do |f| %>
-  <%= f.select :option, [ ['', 'A'],
-                            ['新着順', 'B'],
-                            ['古い順', 'C'],
-                            ['いいね多い順', 'D'],
+  <%= f.select :option, [ ['', 'new'],
+                            ['新着順', 'new'],
+                            ['古い順', 'old'],
+                            ['いいね多い順', 'like_most'],
                           ] %>
   <%= f.submit "並び替え" %>
 <% end %>
@@ -63,9 +63,9 @@
             <div class="descript">
               <%= link_to topic_path(result) do %>
                 <% if result.password_digest.nil? %>
-                  <p class="topic-text">
-                    <%= result.description %>
-                  </p>
+                  <div class="topic-text">
+                    <%= simple_format(result.description) %>
+                  </div>
                 <% else %>
                   <p class="topic-text">
                     <%= link_to "secret", "/topic_password/#{result.id}", id: result.id %>
@@ -82,9 +82,6 @@
         </div>
       </div>
     <% end %>
- <div class="col-md-6 col-md-offset-3 text-center">
-  <%= paginate @topics %>
-</div>
 <% else %>
 
     <% @topics.each do |topic| %>
@@ -130,9 +127,9 @@
             <div class="descript">
               <%= link_to topic_path(topic) do %>
                 <% if topic.password_digest.nil? %>
-                  <p class="topic-text">
-                    <%= topic.description %>
-                  </p>
+                  <div class="topic-text">
+                    <%= simple_format(topic.description) %>
+                  </div>
                 <% else %>
                   <p class="topic-text">
                     <%= link_to "secret", "/topic_password/#{topic.id}", id: topic.id %>
