--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -8,7 +8,7 @@
       <%= c.content %>
     </div>
     <% if current_user == c.user %>
-      <div class="text-right border-bottom"><%= link_to "削除", topic_comment_path(c.topic_id, c.id), method: :delete, remote: true %></div>
+      <div class="text-right border-bottom"><%= link_to "削除", topic_comment_path(c.topic_id, c.id), method: :delete, remote: true, class: "destroy-comment" %></div>
     <% end %>
   </div>
   <hr>
