--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -56,7 +56,7 @@
                       <li><i class="far fa-comment-dots like-btn"></i></li>
                     <% end %>
                     <li><i class="far fa-heart like-btn" ></i></li>
-                    <li><%= result.like_users.count %></li>
+                    <li class="likes-position"><%= result.like_users.count %></li>
                   <% end %>
                 </ul>
 
