--- a/app/views/users/_topics.html.erb
+++ b/app/views/users/_topics.html.erb
@@ -43,9 +43,9 @@
             <div class="descript">
               <%= link_to topic_path(topic) do %>
                 <% if topic.password_digest.nil? %>
-                  <p class="topic-text">
-                    <%= topic.description %>
-                  </p>
+                  <div class="topic-text">
+                    <%= simple_format(topic.description) %>
+                  </div>
                 <% else %>
                   <p class="topic-text">
                     <%= link_to "secret", "/topic_password/#{topic.id}", id: topic.id %>
